<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.tutorial.basketballscore.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/local_team"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:gravity="center"
            android:text="@string/visitor_team"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_local" />

        <ImageView
            android:id="@+id/image_ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="244dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_visitor_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:text="@{mainViewModel.visitorScoreLiveData.toString()}"
            android:textSize="75sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_local_score"
            tools:text="32" />

        <TextView
            android:id="@+id/text_local_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@{mainViewModel.localScoreLiveData.toString()}"
            android:textSize="75sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="25" />

        <ImageButton
            android:id="@+id/image_bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sum2_local"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:onClick="@{() -> mainViewModel.resetScores()}"/>

        <ImageButton
            android:id="@+id/image_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="212dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toEndOf="@+id/image_bin"
            app:layout_constraintTop_toBottomOf="@+id/btn_subtract_local"
            app:srcCompat="@android:drawable/ic_menu_send"/>

        <Button
            android:id="@+id/btn_subtract_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:backgroundTint="@color/red"
            android:text="@string/subtract1"
            app:layout_constraintStart_toEndOf="@+id/btn_sum2_local"
            app:layout_constraintTop_toBottomOf="@+id/btn_sum3_local"
            android:onClick="@{() -> mainViewModel.subtractLocalPoints()}"/>

        <Button
            android:id="@+id/btn_sum1_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="104dp"
            android:text="@string/sum1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> mainViewModel.addLocalPoints(1)}"/>

        <Button
            android:id="@+id/btn_sum2_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:text="@string/sum2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sum1_local"
            android:onClick="@{() -> mainViewModel.addLocalPoints(2)}"/>

        <Button
            android:id="@+id/btn_subtract_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:backgroundTint="@color/red"
            android:text="@string/subtract1"
            app:layout_constraintStart_toEndOf="@+id/btn_sum2_visitor"
            app:layout_constraintTop_toBottomOf="@+id/btn_sum3_visitor"
            android:onClick="@{() -> mainViewModel.subtractVisitorPoints()}"/>

        <Button
            android:id="@+id/btn_sum1_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="80dp"
            android:text="@string/sum1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_bin"
            android:onClick="@{() -> mainViewModel.addVisitorPoints(1)}"/>

        <Button
            android:id="@+id/btn_sum2_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:text="@string/sum2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sum1_visitor"
            android:onClick="@{() -> mainViewModel.addVisitorPoints(2)}"/>

        <Button
            android:id="@+id/btn_sum3_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="104dp"
            android:text="@string/sum3"
            app:layout_constraintStart_toEndOf="@+id/btn_sum1_local"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> mainViewModel.addLocalPoints(3)}"/>

        <Button
            android:id="@+id/btn_sum3_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="80dp"
            android:text="@string/sum3"
            app:layout_constraintStart_toEndOf="@+id/btn_sum1_visitor"
            app:layout_constraintTop_toBottomOf="@+id/image_send"
            android:onClick="@{() -> mainViewModel.addVisitorPoints(3)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>